// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div
  class="wmstool-spin wmstool-spin-spinning"
>
  <span
    class="wmstool-spin-dot"
  >
    <i />
    <i />
    <i />
    <i />
  </span>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div
  class="wmstool-spin wmstool-spin-spinning"
>
  <i
    class="anticon anticon-spin anticon-loading"
    style="font-size:24px"
  />
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div
    class="wmstool-spin-nested-loading"
  >
    <div
      class="wmstool-spin-container"
    >
      <div
        class="wmstool-alert wmstool-alert-info wmstool-alert-with-description wmstool-alert-no-icon"
        data-show="true"
      >
        <span
          class="wmstool-alert-message"
        >
          Alert message title
        </span>
        <span
          class="wmstool-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <span
      class="wmstool-switch"
      tabindex="0"
    >
      <span
        class="wmstool-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div
  class="example"
>
  <div
    class="wmstool-spin wmstool-spin-spinning"
  >
    <span
      class="wmstool-spin-dot"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div
    class="wmstool-spin-nested-loading"
  >
    <div
      class="wmstool-spin-container"
    >
      <div
        class="wmstool-alert wmstool-alert-info wmstool-alert-with-description wmstool-alert-no-icon"
        data-show="true"
      >
        <span
          class="wmstool-alert-message"
        >
          Alert message title
        </span>
        <span
          class="wmstool-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <span
      class="wmstool-switch"
      tabindex="0"
    >
      <span
        class="wmstool-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div
    class="wmstool-spin wmstool-spin-sm wmstool-spin-spinning"
  >
    <span
      class="wmstool-spin-dot"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
  <div
    class="wmstool-spin wmstool-spin-spinning"
  >
    <span
      class="wmstool-spin-dot"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
  <div
    class="wmstool-spin wmstool-spin-lg wmstool-spin-spinning"
  >
    <span
      class="wmstool-spin-dot"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div
  class="wmstool-spin-nested-loading"
>
  <div>
    <div
      class="wmstool-spin wmstool-spin-spinning wmstool-spin-show-text"
    >
      <span
        class="wmstool-spin-dot"
      >
        <i />
        <i />
        <i />
        <i />
      </span>
      <div
        class="wmstool-spin-text"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="wmstool-spin-container wmstool-spin-blur"
  >
    <div
      class="wmstool-alert wmstool-alert-info wmstool-alert-with-description wmstool-alert-no-icon"
      data-show="true"
    >
      <span
        class="wmstool-alert-message"
      >
        Alert message title
      </span>
      <span
        class="wmstool-alert-description"
      >
        Further details about the context of this alert.
      </span>
    </div>
  </div>
</div>
`;
